[package]
name = "strudel_rs"
version = "0.1.0"
description = "local REPL analog strudel"
authors = ["itterum"]
license = "MIT"
edition = "2024"

[dependencies]
color-eyre = "0.6.3"
cpal = "0.17.3"
crossterm = "0.29.0"
ratatui = "0.30.0"
anyhow = "1.0.102"

# Read the optimization guideline for more details: https://ratatui.rs/recipes/apps/release-your-app/#optimizations
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
